# backend/cmd/app/main.go
@@ -2,14 +2,17 @@ package main
 
 import (
 	"log"
+	"time"
 
 	"github.com/gin-gonic/gin"
 
 	_ "math/docs"
 	v1http "math/internal/delivery/http/v1"
+	"math/internal/middleware"
 	"math/internal/repository/postgres"
 	"math/internal/usecase"
 
+	"github.com/gin-contrib/cors"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -23,17 +26,45 @@ func main() {
 	}
 
 	userRepo := postgres.NewUserRepo(db)
-	userUseCase := usecase.NewUserUseCase(userRepo)   // создаём usecase из репозитория
-	userHandler := v1http.NewUserHandler(userUseCase) // передаём usecase в хендлер
+	taskRepo := postgres.NewTaskRepo(db)
+
+	userUseCase := usecase.NewUserUseCase(userRepo)
+	taskUseCase := usecase.NewTaskUseCase(taskRepo)
+
+	userHandler := v1http.NewUserHandler(userUseCase)
+	taskHandler := v1http.NewTaskHandler(taskUseCase)
+
+	server.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	server.GET("/", func(c *gin.Context) {
+		c.Redirect(302, "/swagger/index.html")
+	})
+
+	server.Use(cors.New(cors.Config{
+		AllowOrigins:     []string{"http://localhost:3000"},
+		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowHeaders:     []string{"Origin", "Content-Type", "Authorization"},
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+		MaxAge:           12 * time.Hour,
+	}))
+
+	authGroup := server.Group("/auth")
+	{
+		authGroup.POST("/login_user", userHandler.LoginUserHandler)
+		authGroup.POST("/create_user", userHandler.CreateUserHandler)
+	}
 
 	userGroup := server.Group("/user")
+	userGroup.Use(middleware.MainMiddleware())
 	{
-		userGroup.POST("/create_user", userHandler.CreateUserHandler)
-		userGroup.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-		// Тут можешь добавить остальные эндпоинты, например:
-		// userGroup.GET("/get_user", userHandler.GetUserHandler)
-		// userGroup.GET("/get_all_users", userHandler.GetAllUsersHandler)
-		userGroup.POST("/delete_user", userHandler.DeleteUserHandler)
+		userGroup.DELETE("/delete_user", userHandler.DeleteUserHandler)
+		userGroup.POST("/refresh", userHandler.RefreshTokenHandler)
+	}
+
+	taskGroup := server.Group("/task")
+	taskGroup.Use(middleware.MainMiddleware())
+	{
+		taskGroup.POST("/create_task", taskHandler.CreateTaskHandler)
 	}
 
 	log.Println("⚡ Starting server on :8080")
