# backend/internal/delivery/http/v1/user_handler.go
@@ -1,9 +1,14 @@
 package v1_http
 
 import (
-	"math/internal/models"
+	"errors"
+	"log"
+	models "math/internal/models/api_models"
+	base_models "math/internal/models/base_models"
 	"math/internal/usecase"
 	"net/http"
+
+	already "math/cmd/app/errors"
 
 	"github.com/gin-gonic/gin"
 )
@@ -22,19 +27,30 @@ func NewUserHandler(uc usecase.UserUsecase) *UserHandler {
 // @Tags         user
 // @Accept       json
 // @Produce      json
-// @Param        user  body      models.User  true  "Данные пользователя"
-// @Success      201   {object}  models.User
+// @Param        user  body      models.AddUser  true  "Данные пользователя"
+// @Success      201   {object}  models.AddUser
 // @Failure      400   {object}  map[string]string
 // @Router       /user/create_user [post]
 func (h *UserHandler) CreateUserHandler(c *gin.Context) {
-	var user models.User
+	var user models.AddUser
 	if err := c.ShouldBindJSON(&user); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input"})
+		log.Println("Error binding JSON:", err)
 		return
 	}
 
-	err := h.Usecase.CreateUserUsecase(&user)
+	var userModel base_models.User
+
+	userModel.Name = user.Name
+	userModel.Email = user.Email
+	userModel.Password = user.Password
+
+	err := h.Usecase.CreateUserUseCase(&userModel)
 	if err != nil {
+		if errors.Is(err, already.ErrUserAlreadyExists) {
+			c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+			return
+		}
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
@@ -48,25 +64,82 @@ func (h *UserHandler) CreateUserHandler(c *gin.Context) {
 // @Tags         user
 // @Accept       json
 // @Produce      json
-// @Param        user  body      models.User  true  "UUID пользователя"
+// @Param        user  body      models.DeleteUser  true  "UUID пользователя"
 // @Success      200   {object}  map[string]string
 // @Failure      400   {object}  map[string]string
 // @Router       /user/delete_user [delete]
 func (h *UserHandler) DeleteUserHandler(c *gin.Context) {
 	// TODO: сделать чтобы принималось только UUID, а не вся структура USER
-	var user struct {
-		UUID string `json:"uuid"`
-	}
+	var user models.DeleteUser
 	if err := c.ShouldBindJSON(&user); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input"})
 		return
 	}
 
-	err := h.Usecase.DeleteUserUseCase(user.UUID)
+	err := h.Usecase.DeleteUserUseCase(user.UUID, user.Password)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
 	c.JSON(http.StatusOK, gin.H{"message": "User deleted successfully"})
+}
+
+// LoginUserHandler godoc
+// @Summary      Вход пользователя
+// @Description  Позволяет пользователю войти в систему
+// @Tags         user
+// @Accept       json
+// @Produce      json
+// @Param        user  body      models.AuthUser  true  "Данные для входа"
+// @Success      200   {object}  models.AuthUser
+// @Failure      400   {object}  map[string]string
+// @Failure      401   {object}  map[string]string
+// @Router       /user/login_user [post]
+func (h *UserHandler) LoginUserHandler(c *gin.Context) {
+	var user models.AuthUser
+	err := c.ShouldBindJSON(&user)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid input"})
+		return
+	}
+
+	accessToken, refreshToken, err := h.Usecase.LoginUserUseCase(user.Email, user.Password)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.SetCookie(
+		"refresh_token", // имя куки
+		refreshToken,    // значение
+		30*24*60*60,     // maxAge
+		"/",             // path
+		"",              // domain
+		false,           // secure //todo: убрать!!!!!!
+		true,            // httpOnly
+	)
+
+	c.JSON(http.StatusOK, gin.H{
+		"message":      "Login successful",
+		"access_token": accessToken,
+	})
+}
+
+func (h *UserHandler) RefreshTokenHandler(c *gin.Context) {
+	refreshCookie, err := c.Cookie("refresh_token")
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "No refresh token"})
+		return
+	}
+
+	newAccessToken, err := h.Usecase.RefreshAccessTokenUseCase(refreshCookie)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid refresh token"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"access_token": newAccessToken,
+	})
 }
