# backend/internal/models/api_models/add_user.go
@@ -1,0 +1,7 @@
+package models
+
+type AddUser struct {
+	Name     string `json:"name" binding:"required"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
