# backend/internal/models/api_models/auth.go
@@ -1,0 +1,6 @@
+package models
+
+type AuthUser struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
