# backend/internal/models/api_models/delete.go
@@ -1,0 +1,6 @@
+package models
+
+type DeleteUser struct {
+	UUID     string `json:"uuid" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
