# backend/internal/models/tasks.go
@@ -1,8 +1,0 @@
-package models
-
-type Tasks struct {
-	Uuid          int    `json:"uuid"`
-	Name          string `json:"name"`
-	Description   string `json:"description"`
-	Email		  string `json:"email"`
-}
